--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="apple-mobile-web-app-status-bar" content="#202125">
     <meta name="theme-color" content="#202125">
-    <link rel="shortcut icon" href="../cdnzia-main/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="/css/home.css">
@@ -67,7 +67,7 @@
                         </div>
                         <div class="mwh-logo">
                             <a href="/home" class="mwh-logo-div">
-                                <img src="../cdnzia-main/images/Logov11.png" alt="Animes House">
+                                <img src="/Logov11.png" alt="Animes House">
                             </a>
                             <div class="clearfix"></div>
                         </div>
