--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
     <meta property="og:title" content="Animes House - Assistir Animes Online - Anime Online HD ! " />
-    <meta property="og:image" content="/images/banner.webp" />
+    <meta property="og:image" content="/images/kissanime.png" />
     <meta property="og:description "
         content="Animes House - Assista Animes Online HD, Melhores Animes em HD , Animes Downloads ,Tensei Shitara Slime Datta Ken,Dodoro online HD,Black Clover,tate no yuusha no nariagari " />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
