--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div id="mw-top">
                 <div class="container">
                     <div class="mwt-content">
-                        <div class="mwt-icon"><img src="https://cdn141.picsart.com/352085828007211.png">
+                        <div class="mwt-icon"><img src="/images/anw-min.webp">
                         </div>
                         <div class="mwh-logo">
                             <a href="/home" class="mwh-logo-div">
